--- a/assets/scss/components/_main.scss
+++ b/assets/scss/components/_main.scss
@@ -42,8 +42,25 @@
     margin: 0;
     padding: 1.5em 3em 1.5em;
   }
-  .mainbar .form .buttons .timestamp strong {
-    font-weight: normal;
-    color: #777;
+  .mainbar .form .buttons .text span {
+    position: relative;
+    padding: .35rem 2rem;
+    background: #8dae28;
+    display: inline-block;
+    margin: 0 auto 1.5rem;
+    color: #fff;
+    border-radius: 3px;
+    font-weight: 600;
+  }
+  .mainbar .form .buttons .text span:after {
+    position: absolute;
+    content: "";
+    border-top: 5px solid #8dae28;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    bottom: -5px;
+    left: 50%;
+    margin-left: -5px;
+    box-shadow: rgba(0,0,0, .2) 0px 2px 10px;
   }
 }
