--- a/assets/css/panel.css
+++ b/assets/css/panel.css
@@ -101,10 +101,27 @@ body.rtl {
   color: #fff;
   width: auto !important;
   list-style: none;
-  border-radius: 3px; }
+  border-radius: 3px;
+  cursor: pointer; }
 
 .draggable-helper a {
   color: #fff !important; }
+
+.draggable-helper-with-image {
+  border: 2px solid #000;
+  padding: 0;
+  line-height: 0;
+  border-radius: 0;
+  width: 79px;
+  height: 79px;
+  background: #000 url(../images/pattern.png); }
+
+.draggable-helper-with-image img {
+  position: relative;
+  z-index: 1;
+  width: 75px;
+  height: 75px;
+  object-fit: cover; }
 
 .uid-preview {
   max-width: 20em;
