--- a/assets/scss/components/_dashboard.scss
+++ b/assets/scss/components/_dashboard.scss
@@ -45,6 +45,9 @@
 .dashboard-box .text {
   padding: .75em 1em;
 }
+.dashboard-box .text :last-child {
+  margin-bottom: 0;
+}
 
 .dashboard-items {
   list-style: none;
