--- a/assets/scss/components/_message.scss
+++ b/assets/scss/components/_message.scss
@@ -47,12 +47,15 @@
 }
 .message-toggle i {
   position: absolute;
-  left: 1px;
-  right: 0;
+  top: 50%;
+  left: 50%;
   font-style: normal;
   text-align: center;
-  font-size: 1.15em;
-  line-height: 1em;
+  font-size: 1.25em;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 .message-is-notice .message-toggle {
   color: #fff;
