URL field icon is now clickable
As soon as an URL field contains a valid URL, you can open the URL in a new window by clicking on the chain icon next to it.

--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -134,6 +134,9 @@ form.loading:after {
   margin-top: -7px;
   color: #777;
 }
+.field-icon:hover .icon {
+  color: #8dae28;
+}
 .field-with-icon .input {
   body.ltr & {
     padding-right: 3.5em;
