Dynamic fa font version in cache busting param

--- a/assets/scss/fontawesome/_path.scss
+++ b/assets/scss/fontawesome/_path.scss
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('#{$fa-font-path}/fontawesome-webfont.woff2?v=4.4.0') format('woff2'), url('#{$fa-font-path}/fontawesome-webfont.woff?v=4.4.0') format('woff');
+  src: url('#{$fa-font-path}/fontawesome-webfont.woff2?v=#{$fa-version}') format('woff2'), url('#{$fa-font-path}/fontawesome-webfont.woff?v=#{$fa-version}') format('woff');
   font-weight: normal;
   font-style: normal;
 }
