Structure field: Fixed cursor for unsortable table

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -100,8 +100,12 @@
   overflow: hidden;
   width: 100%;
   text-overflow: ellipsis;
-  cursor: move;
 }
+
+.structure[data-sortable=true] .structure-table td a {
+  cursor: move;  
+}
+
 .structure-table-options {
   width: 3rem;
   text-align: center;
