--- a/app/fields/structure/assets/css/structure.css
+++ b/app/fields/structure/assets/css/structure.css
@@ -80,8 +80,12 @@
   overflow: hidden;
   width: 100%;
   text-overflow: ellipsis;
-  cursor: move;
 }
+
+.structure[data-sortable=true] .structure-table td a {
+  cursor: move;  
+}
+
 .structure-table-options {
   width: 3rem;
   text-align: center;
