--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -312,11 +312,11 @@ form.loading:after {
   outline: 0;
   border-color: #8dae28;
 }
+.input.over {
+  border-color: #000;
+}
 textarea.input {
   resize: none;
-}
-textarea.over {
-  border-color: #000;
 }
 .input:required,
 .input:invalid {
