--- a/assets/css/panel.css
+++ b/assets/css/panel.css
@@ -1394,6 +1394,7 @@ body.rtl .tag button.tag-label {
   border-right: 1px solid #ddd; }
 
 .dashboard-item-icon i {
+  position: static;
   padding-top: .8em; }
 
 .dashboard-item-text {
