Fixed issue with very long checkbox labels (Fix #905)

--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -460,8 +460,16 @@ textarea.input {
   margin-bottom: .5em;
 }
 .input-list-item .input {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+.input-list-item .input span {
+  position: absolute;
   white-space: nowrap;
   overflow: hidden;
+  left: 2.5rem;
+  right: 1rem;
   text-overflow: ellipsis;
 }
 
