--- a/assets/css/panel.css
+++ b/assets/css/panel.css
@@ -831,8 +831,16 @@ body.rtl .field-with-icon .input-with-tags {
   margin-bottom: .5em; }
 
 .input-list-item .input {
+  position: relative;
+  display: block;
+  overflow: hidden; }
+
+.input-list-item .input span {
+  position: absolute;
   white-space: nowrap;
   overflow: hidden;
+  left: 2.5rem;
+  right: 1rem;
   text-overflow: ellipsis; }
 
 /* Input with items */
