Fixed RTL checkbox margin

--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -370,7 +370,7 @@ textarea.input {
   }
   body.rtl & {
     float: right;
-    margin: .3em .25em .3em 1;
+    margin: .3em .25em .3em 1em;
   }
 }
 .selectbox {
