--- a/assets/css/panel.css
+++ b/assets/css/panel.css
@@ -897,7 +897,7 @@ body.rtl .buttons .btn-submit {
   float: none !important; }
 
 /* Special fields */
-#form-field-username {
+body:not(.login) #form-field-username {
   text-transform: lowercase; }
 
 @media screen and (min-width: 50em) {
