--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -532,10 +532,9 @@ textarea.input {
 }
 
 /* Special fields */
-#form-field-username {
+body:not(.login) #form-field-username {
   text-transform: lowercase;
 }
-
 
 
 @media screen and (min-width: 50em) {
